# bharatanatyam-mudra-classification

./: Bharathnatyam_mudra_detection_96_.ipynb  METRICS.md  README.md  TODO.md  hand detection using mediapipe.ipynb  imagelandmarkmain.py  main.py  mobilenet_training.ipynb  project.ipynb  pyproject.toml  test_with_feat_ext.py  test_with_train_data.py  training.ipynb
googletutorial/: tutorial.ipynb  tutorial.py
model/: __init__.py
model/keypoint_classifier/: keypoint.csv  keypoint_classifier.keras  keypoint_classifier.tflite  keypoint_classifier_label.csv
yttutorial/: kevintest.py  keypoint_classification_EN.ipynb  tutorial.py
yttutorial/tutmodel/: __init__.py
yttutorial/tutmodel/keypoint_classifier/: keypoint_classifier.py
yttutorial/tututils/: __init__.py
